initial attempt at forms

--- a/safeweb/templates/register.html
+++ b/safeweb/templates/register.html
@@ -9,6 +9,7 @@
         time. However, if you run into trouble...
     </div>
 
-    {{ form.as_p }}
+    {{ user_form.as_p }}
+    {{ profile_form.as_p }}
 </div>
 {% endblock %}
