moved media to static

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link href="/media/main.css" rel="stylesheet">
+  <link href="/static/main.css" rel="stylesheet">
   {% block extrahead %}
   {% endblock %}
 </head>
