--- a/templates/test.html
+++ b/templates/test.html
@@ -3,8 +3,6 @@
   <link href="../static/main.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Limelight&v1' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=La+Belle+Aurore&v1' rel='stylesheet' type='text/css'>
-  {% block extrahead %}
-  {% endblock %}
 </head>
 <body>
   <div id="header">
@@ -15,12 +13,11 @@
   </div>
   <div id="main">
     <div id="content">
-    {% block content %}
-    {% endblock %}
+    HELLO
     </div>    
   </div>
   <div id="footer">
    	<p>&#169SafeTrip</p>
-  </div>
+   </div>
 </body>
 </html>
