more work on UI

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,12 +13,8 @@
 	    <h2>We want you safe</h2>
     </div>
   </div>
-  <div id="main">
-    <div id="content">
-    {% block content %}
-    {% endblock %}
-    </div>    
-  </div>
+  {% block main %}
+  {% endblock %}
   <div id="footer">
    	<p>&#169SafeTrip</p>
   </div>
