--- a/static/main.css
+++ b/static/main.css
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-
 
 /* basic typography */
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {background:transparent none repeat scroll 0 0; border:0 none; margin:0; outline-color:-moz-use-text-color; outline-style:none; outline-width:0; padding:0; vertical-align:baseline;}
@@ -19,7 +17,7 @@ p { line-height:1.4em; margin:0.5em 0 1em;}
 body {background:#f7f7f7 none repeat scroll 0 0; color:#282828; font-family:'Helvetica Neue',Helvetica,Arial,sans-serif; font-size:14px;}
 
 /* header */
-#header {background:#333333 none repeat scroll 0 0; margin-bottom:20px; height:50px; border-bottom: 6px solid #eb008b;}
+#header {background:#333333 none repeat scroll 0 0; height:50px; border-bottom: 6px solid #eb008b;}
 #header .logo {
 	margin:0 auto; height:30px; padding-left: 50px; width:990px; display: block; height: 49px;
 }
@@ -44,7 +42,7 @@ body {background:#f7f7f7 none repeat scroll 0 0; color:#282828; font-family:'Hel
 }
 
 /* main */
-#main {background:#f7f7f7 none repeat scroll 0 0; margin:0 auto; padding:0 30px; width:990px;}
+#main {background:#f7f7f7 none repeat scroll 0 0; margin:20px auto; padding:0 30px; width:990px;}
 
 /* content */
 #content {-moz-border-radius:10px; -webkit-border-radius:10px; border-radius:10px; background-color:#FFFFFF; width:930px; padding: 15px; margin-left:15px; float:left; position:relative; min-height:500px;}
@@ -60,6 +58,158 @@ body {background:#f7f7f7 none repeat scroll 0 0; color:#282828; font-family:'Hel
     text-align: center;
     color: #FFF;
 }
-=======
-/* styles */
->>>>>>> 8ec9cca11c868b87b8d8f22e330b42129bbdfd4c
+
+/* --------------- banner ------------------ */
+
+#banner_wrap {
+    height:auto;
+    position:relative;
+    height:350px;
+    overflow: visible;
+    border-bottom:1px solid #333333;
+}
+.regionbanner {
+    text-align:center;
+    width:1800px;
+    height:auto;
+    position:relative;
+    left:50%;
+    margin-left:-900px;
+}
+.ad_banneroverlay {
+    margin:0 auto 0 auto;
+    top:160px;
+    position:relative;
+    width:900px;
+    height:auto;
+}
+#ad_banner_content {
+    height:350px;
+    overflow:hidden
+}
+#ad_banner_content .ad_bannerwrap {
+    position: absolute;
+    height:350px;
+    width:100%;
+    background-position:top center;
+}
+#ad_bannermenu {
+    background: transparent url(../masterImages/banner_bg.png) repeat top left;
+    height:55px;
+    width:100%;
+    margin:-55px 0 0 0;
+    position:absolute;
+    bottom:0;
+}
+.banner_tabwrap {
+    width:880px;
+    margin:0 auto;
+}
+.ad_tab {
+    width:220px;
+    float:left;
+    height:55px;
+    cursor:pointer;
+    text-align:center;
+}
+.ad_tab h4 {
+    padding:10px 0;
+    line-height:1.8em;
+}
+.ad_tab h4 {
+    color:#848484;
+}
+.active_tab h4 {
+    color:#FFF;
+}
+.ad_tab:hover .ad_tabpopup {
+    display:block;
+    width:200px;
+    border:10px solid  #333333;
+    top:-80px;
+    position:relative;
+    height:130px;
+    z-index:5000;
+}
+.ad_tab:hover .ad_tabpopup h4 {
+    background-color:#202020;
+}
+.ad_tab:hover .ad_tabpopup .ad_tabthumb {
+    width:200px;
+    height:80px;
+}
+.banner_text {
+    padding:20px;
+    /*background: transparent url(../masterImages/banner_content_bg.png) repeat top left;*/
+    background-color:#000;
+    opacity:0.6;
+    text-align:right;
+    float:right;
+    min-width: 400px;
+    
+}
+.banner_text h2 {
+    color:#FFF;
+    font-size:2.4em;
+    padding:0 0 10px 0;
+}
+.banner_text a {
+    color:#fff;
+}
+.banner_text a:hover {
+    text-decoration:underline;
+}
+.ad_bannerarticle { color: #fff;}
+
+/* features */
+
+#features {
+margin: 20px auto;
+width:790px;
+overflow: hidden;
+}
+
+#features .box {
+width: 367px;
+height: 179px;
+float: left;
+margin: 0 24px 32px 0;
+background: black;
+}
+
+#features a {
+display: block;
+color: white;
+text-decoration: none;
+font-weight: normal;
+font-size: 75%;
+width: 353px;
+height: 167px;
+padding: 5px;
+border: 2px white solid;
+}
+
+#features span {
+display: block;
+width: 353px;
+}
+
+.featuresHeader {
+margin: 0;
+padding: 0;
+font-size: 150%;
+font-weight: bold;
+text-transform: uppercase;
+}
+
+#features a:hover {
+color: #9CF;
+}
+
+.feature4a {
+background: url(../static/images/stoptraffik.jpg) no-repeat bottom right;
+}
+
+.feature4d {
+background: url(../static/images/freedom.jpg) no-repeat bottom right;
+}
