--- a/templates/test-home.html
+++ b/templates/test-home.html
@@ -19,7 +19,7 @@
 	    	<div class="ad_banneroverlay">
 	            <div class="banner_text">
 	                <h2>We want you safe!</h2>
-	                <div class="ad_bannerarticle"><p><a target="_self" title="Link to Young People page" href="/missing-people/young-people">Click here to register</a></p></div>
+	                <div class="ad_bannerarticle"><p><a title="register" href="/register">Click here to register</a></p></div>
 	            </div>
 	        </div>
 	    </div>
