--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link href="../static/main.css" rel="stylesheet">
+  <link href="/static/main.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Limelight&v1' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=La+Belle+Aurore&v1' rel='stylesheet' type='text/css'>
   {% block extrahead %}
