--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,42 @@
 {% extends 'base.html' %}
 
 {% block main %}
-<div id="intro">
-    We want you to have a safe journey. 
-</div>
-<div id="register" class="big-button">
-    <a href="{% url register %}">Register for a SafeTrip</a>
-</div>
-<div id="update" class="big-button">
-    <a href="{% url update %}">Tell us how your trip is going</a>
-</div>
+  <div id="banner_wrap">
+	  <div id="ad_banner_content">
+	
+		<div id="ad_banner_0" class="ad_bannerwrap active_banner" style="background-image: url(../static/images/banner.jpg); visibility: visible; zoom: 1; opacity: 1; ">
+	    	<div class="ad_banneroverlay">
+	            <div class="banner_text">
+	                <h2>We want you safe!</h2>
+                    <div class="ad_bannerarticle"><p><a title="register" href="{% url register %}">Click here to register</a></p></div>
+                    <div class="ad_bannerarticle"><p><a title="update" href="{% url update %}">Tell us how you're doing</a></p></div>
+	            </div>
+	        </div>
+	    </div>
+	    
+	  </div>
+  </div>
+  
+  <div id="features">
+      <div class="box featureRotateLeft" style="position: relative;">
+        <a href="/ourwork/act/" class="feature4a" style="position: absolute; top: 0px; left: 0px; z-index: 2; display: block; opacity: 1; ">
+        <span class="featuresHeader">Stop The Traffik</span>
+        </a>
+      </div>
+      
+      <div class="box featureRotateRight" style="position: relative; ">
+		<a href="http://www.freedomticketforlife.org" class="feature4d" style="top: 0px; left: 0px; z-index: 1; position: absolute; display: block; opacity: 1; ">
+        <span class="bottom">
+        <span class="featuresHeader">FREEDOM TICKET FOR LIFE</span>
+        Get sponsored to run &amp; give a girl her freedom ticket for life
+        </span>
+        </a>
+      </div>
+      
+  </div>
+	
+  <div id="footer">
+   	<p>&#169SafeTrip</p>
+   </div>
+
 {% endblock %}
