generate secretsn and modify models

--- a/safeweb/templates/confirm.html
+++ b/safeweb/templates/confirm.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
-Confirmed
+<h2>Remember your secret word</h2>
 
+<p>Your secret word is <strong>{{ secret }}</strong>.</p>
+<p>You will need to use this word whenever you contact us. </p>
 {% endblock %}
