--- a/static/main.css
+++ b/static/main.css
@@ -14,7 +14,7 @@ ul, ol {margin:0; padding:0;}
 
 p { line-height:1.4em; margin:0.5em 0 1em;}
 
-body {background:#f7f7f7 none repeat scroll 0 0; color:#282828; font-family:'Helvetica Neue',Helvetica,Arial,sans-serif; font-size:14px;}
+body {height: 100%; background:#f7f7f7 none repeat scroll 0 0; color:#282828; font-family:'Helvetica Neue',Helvetica,Arial,sans-serif; font-size:14px;}
 
 /* header */
 #header {background:#333333 none repeat scroll 0 0; height:50px; border-bottom: 6px solid #eb008b;}
@@ -42,14 +42,14 @@ body {background:#f7f7f7 none repeat scroll 0 0; color:#282828; font-family:'Hel
 }
 
 /* main */
-#main {background:#f7f7f7 none repeat scroll 0 0; margin:20px auto; padding:0 30px; width:990px;}
+#main {min-height: 100%; height: auto !important; height: 100%; background:#f7f7f7 none repeat scroll 0 0; margin:20px auto; padding:0 30px; width:990px; min-height:100%; padding-bottom:40px;   /* Height of the footer */}
 
 /* content */
 #content {-moz-border-radius:10px; -webkit-border-radius:10px; border-radius:10px; background-color:#FFFFFF; width:930px; padding: 15px; margin-left:15px; float:left; position:relative; min-height:500px;}
 
 /** Footer **/
 
-#footer {position:absolute; bottom:0; width:100%; height:40px; border-top: 6px solid #eb008b; background:#333333 none repeat scroll 0 0;}
+#footer {width:100%; height:40px; border-top: 6px solid #eb008b; background:#333333 none repeat scroll 0 0;}
 
 #footer p {	    
     font-size: 14px;
@@ -57,6 +57,39 @@ body {background:#f7f7f7 none repeat scroll 0 0; color:#282828; font-family:'Hel
     padding: 5px 30px;    
     text-align: center;
     color: #FFF;
+}
+
+/* form */
+
+form {
+    margin-top: 20px;
+}
+
+form p {
+    float: left;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
+
+form label {
+	color: #616161;
+    float: left;
+    font-size: 12px;
+    font-weight: bold;
+    padding-right: 10px;
+    text-align: right;
+    width: 300px;
+}
+
+form input[type="text"], input[type="password"] {
+    color: #616161;
+    font-size: 12px;
+}
+
+form input[type="submit"] {
+	float: left;
+	margin: 10px 0 0 350px;	
 }
 
 /* --------------- banner ------------------ */
