--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <body>
   <div id="header">
   	<div class="logo">
-	    <h1>SafeTrip</h1>
+        <h1><a href="/">SafeTrip</a></h1>
 	    <h2>We want you safe</h2>
     </div>
   </div>
