--- a/static/main.css
+++ b/static/main.css
@@ -18,10 +18,17 @@ body {height: 100%; background:#f7f7f7 none repeat scroll 0 0; color:#282828; fo
 
 /* header */
 #header {background:#333333 none repeat scroll 0 0; height:50px; border-bottom: 6px solid #eb008b;}
-#header .logo {
+#header .header-content {
 	margin:0 auto; height:30px; padding-left: 50px; width:990px; display: block; height: 49px;
 }
-#header .logo h1 {        
+#header .header-content .logo {
+	float:left;
+	width: 200px;
+	height: 50px;
+}
+
+#header .header-content .logo h1 {
+	float:left;       
     color: #fff;
     font-size: 24px;
     font-family: 'Limelight', arial, serif;
@@ -30,16 +37,38 @@ body {height: 100%; background:#f7f7f7 none repeat scroll 0 0; color:#282828; fo
     text-shadow: 1px 2px 2px #000;
     /*line-height: 50px;*/
     padding:0;
-    margin:0; 
+    margin:0;
+    width: 200px;
 }
-#header .logo h2 {
+#header .header-content .logo h2 {
+	float:left;
+	clear: both;
 	font-size: 16px;
 	font-family: 'La Belle Aurore', arial, serif;
 	font-weight: lighter;
 	color: #fff;
 	padding:3px 0 0 10px;
 	line-height: 10px;
+	width: 200px;
 }
+
+#header .header-content .right-menu {
+	float: right;
+	height:50px;
+	margin:15px 105px 0 0;
+}
+
+#header .header-content .right-menu span {
+	float: left;
+	font-size: 16px;
+	font-family: Arial, serif;
+	font-weight: lighter;
+	color: #fff;
+	padding:5px 0 0 5px;
+	line-height: 10px;	
+}
+
+#header .header-content .right-menu span.pink {color:#eb008b; font-weight:bold;}
 
 /* main */
 #main {min-height: 100%; height: auto !important; height: 100%; background:#f7f7f7 none repeat scroll 0 0; margin:20px auto; padding:0 30px; width:990px; min-height:100%; padding-bottom:40px;   /* Height of the footer */}
