--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,16 @@
   {% endblock %}
 </head>
 <body>
-  <div id="header">
-  	<div class="logo">
-	    <h1>SafeTrip</h1>
-	    <h2>We want you safe</h2>
-    </div>
+  <div id="header"> 
+    <div class="header-content"> 
+    	<div class="logo">
+	        <h1>SafeTrip</h1> 
+	        <h2>We want you safe</h2> 
+        </div>
+        <div class="right-menu">
+	    	<span>Text</span><span class="pink">SAFETRIP</span><span>anonymously on</span><span class="pink">5480605</span>
+	    </div>
+    </div>    
   </div>
   {% block main %}
   {% endblock %}
