--- a/templates/test-form.html
+++ b/templates/test-form.html
@@ -15,11 +15,16 @@
 </head> 
 <body> 
   <div id="header"> 
-    <div class="logo"> 
-        <h1>SafeTrip</h1> 
-        <h2>We want you safe</h2> 
-    </div> 
-  </div> 
+    <div class="header-content"> 
+    	<div class="logo">
+	        <h1>SafeTrip</h1> 
+	        <h2>We want you safe</h2> 
+        </div>
+        <div class="right-menu">
+	    	<span>Text</span><span class="pink">SAFETRIP</span><span>anonymously on</span><span class="pink">5480605</span>
+	    </div>
+    </div>    
+  </div>
   
 <div id="main"> 
   <div id="content"> 
