done ui for confirm and help pages

--- a/safeweb/templates/confirm.html
+++ b/safeweb/templates/confirm.html
@@ -1,9 +1,9 @@
 {% extends 'contentbase.html' %}
 
 {% block content %}
-
-<h2>Remember your secret word</h2>
-
-<p>Your secret word is <strong>{{ secret }}</strong>.</p>
-<p>You will need to use this word whenever you contact us. </p>
+<div class="msg">
+	<h2>Remember your secret word</h2>	
+	<p>Your secret word is <strong>{{ secret }}</strong>.</p>
+	<p>You will need to use this word whenever you contact us.</p>
+</div>
 {% endblock %}
