--- a/safeweb/templates/safe.html
+++ b/safeweb/templates/safe.html
@@ -1,6 +1,7 @@
 {% extends 'contentbase.html' %}
 
 {% block content %}
-
-Glad to hear you're safe.
+<div class="msg">
+	<h2>Glad to hear you're safe.</h2>
+</div>
 {% endblock %}
