--- a/safeweb/templates/updated.html
+++ b/safeweb/templates/updated.html
@@ -1,5 +1,7 @@
 {% extends 'contentbase.html' %}
 
 {% block content %}
-Thanks for your update. We will forward it on to your specified contacts. 
+<div class="msg">
+	<h2>Thanks for your update. We will forward it on to your specified contacts.</h2>
+</div>
 {% endblock %}
