--- a/safeweb/templates/help.html
+++ b/safeweb/templates/help.html
@@ -2,9 +2,11 @@
 
 {% block content %}
 
-We're trying to help you
-
-<div id="help_message">
-    {{ help_message }}
+<div class="msg">
+	<h2>We're trying to help you</h2>
+	
+	<div id="help_message">
+	    {{ help_message }}
+	</div>
 </div>
 {% endblock %}
