--- a/safeweb/templates/register.html
+++ b/safeweb/templates/register.html
@@ -6,7 +6,7 @@
     <div id="about_registration">
         <h4>What will you do with my details?</h4>
         All information you enter is private, and you can delete it at any
-        time. However, if you run into trouble...
+        time by texting SAFE to 5480605.
     </div>
 
     <form enctype="multipart/form-data" method="post" action="">
