--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 		<div id="ad_banner_0" class="ad_bannerwrap active_banner" style="background-image: url(../static/images/banner.jpg); visibility: visible; zoom: 1; opacity: 1; ">
 	    	<div class="ad_banneroverlay">
 	            <div class="banner_text">
-	                <h2>We want you safe!</h2>
+	                <h2>Stay safe while you travel!</h2>
                     <div class="ad_bannerarticle"><p><a title="register" href="{% url register %}">Click here to register</a></p></div>
                     <div class="ad_bannerarticle"><p><a title="update" href="{% url update %}">Tell us how you're doing</a></p></div>
 	            </div>
