--- a/static/country_summary.css
+++ b/static/country_summary.css
@@ -1,7 +1,7 @@
 td {
     padding: 10px;
     width: 18%;
-    vertical-align: center;
+    vertical-align: middle;
     border: solid 1px gray;
     border-width: 0 0 1px 0;
 }
